<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_scroll_top"
        android:icon="@drawable/ic_baseline_arrow_upward_24"
        android:title="@string/action_scroll_top"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_baseline_refresh_24"
        android:title="@string/action_refresh"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_search"
        android:title="@android:string/search_go"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_note_add"
        android:title="@string/add_profile"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_scan_qr_code"
                android:title="@string/add_profile_methods_scan_qr_code" />
            <item
                android:id="@+id/action_import_clipboard"
                android:title="@string/action_import" />
            <item
                android:id="@+id/action_import_file"
                android:title="@string/action_import_file" />
            <item
                android:id="@+id/action_import_clipboard_ping"
                android:title="@string/action_import_clipboard_ping" />
            <item
                android:id="@+id/action_import_file_ping"
                android:title="@string/action_import_file_ping" />
            <item android:title="@string/add_profile_methods_manual_settings">
                <menu>
                    <item
                        android:id="@+id/action_new_socks"
                        android:title="@string/action_socks" />
                    <item
                        android:id="@+id/action_new_http"
                        android:title="@string/action_http" />
                    <item
                        android:id="@+id/action_new_ss"
                        android:title="@string/action_shadowsocks" />
                    <item
                        android:id="@+id/action_new_vmess"
                        android:title="@string/action_vmess" />
                    <item
                        android:id="@+id/action_new_vless"
                        android:title="VLESS" />
                    <item
                        android:id="@+id/action_new_trojan"
                        android:title="@string/action_trojan" />
                    <item
                        android:id="@+id/action_new_trojan_go"
                        android:title="@string/action_trojan_go" />
                    <item
                        android:id="@+id/action_new_mieru"
                        android:title="@string/action_mieru" />
                    <item
                        android:id="@+id/action_new_naive"
                        android:title="@string/action_naive" />
                    <item
                        android:id="@+id/action_new_hysteria"
                        android:title="@string/action_hysteria" />
                    <item
                        android:id="@+id/action_new_tuic"
                        android:title="@string/action_tuic" />
                    <item
                        android:id="@+id/action_new_shadowtls"
                        android:title="@string/action_shadowtls" />
                    <item
                        android:id="@+id/action_new_anytls"
                        android:title="@string/action_anytls" />
                    <item
                        android:id="@+id/action_new_ssh"
                        android:title="@string/action_ssh" />
                    <item
                        android:id="@+id/action_new_wg"
                        android:title="@string/action_wireguard" />
                    <item
                        android:id="@+id/action_new_config"
                        android:title="@string/custom_config" />
                    <item
                        android:id="@+id/action_new_chain"
                        android:title="@string/proxy_chain" />
                </menu>
            </item>
        </menu>
    </item>

    <!-- ZyBox: 多选模式工具栏（默认隐藏，进入多选时显示） -->
    <item
        android:id="@+id/action_multi_select_all"
        android:title="@string/multi_select_all"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_multi_select_invert"
        android:title="@string/multi_select_invert"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_multi_select_exit"
        android:icon="@drawable/ic_navigation_close"
        android:title="@string/multi_select_exit"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_multi_misc"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:title=""
        android:visible="false"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_multi_clear_traffic"
                android:title="@string/multi_clear_traffic" />
            <item
                android:id="@+id/action_multi_delete"
                android:title="@string/multi_delete" />
            <item
                android:id="@+id/action_multi_remove_duplicate"
                android:title="@string/multi_remove_duplicate" />
            <item
                android:id="@+id/action_multi_remove_duplicate_strict"
                android:title="@string/multi_remove_duplicate_strict" />
            <item
                android:id="@+id/action_multi_tcp_ping"
                android:title="@string/multi_tcp_ping" />
            <item
                android:id="@+id/action_multi_url_test"
                android:title="@string/multi_url_test" />
            <item
                android:id="@+id/action_multi_clear_results"
                android:title="@string/multi_clear_results" />
            <item
                android:id="@+id/action_multi_delete_unavailable"
                android:title="@string/multi_delete_unavailable" />
            <item android:title="@string/multi_qr_group">
                <menu>
                    <item
                        android:id="@+id/action_multi_qr_standard"
                        android:title="@string/multi_qr_standard" />
                    <item
                        android:id="@+id/action_multi_qr_standard_ping"
                        android:title="@string/multi_qr_standard_ping" />
                    <item
                        android:id="@+id/action_multi_qr_sn"
                        android:title="@string/multi_qr_sn" />
                </menu>
            </item>
            <item android:title="@string/multi_clipboard_group">
                <menu>
                    <item
                        android:id="@+id/action_multi_clipboard_standard"
                        android:title="@string/multi_clipboard_standard" />
                    <item
                        android:id="@+id/action_multi_clipboard_standard_ping"
                        android:title="@string/multi_clipboard_standard_ping" />
                    <item
                        android:id="@+id/action_multi_clipboard_sn"
                        android:title="@string/multi_clipboard_sn" />
                    <item
                        android:id="@+id/action_multi_file_standard"
                        android:title="@string/multi_file_standard" />
                    <item
                        android:id="@+id/action_multi_file_ping"
                        android:title="@string/multi_file_ping" />
                </menu>
            </item>
        </menu>
    </item>

    <item
        android:id="@+id/action_misc"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:title=""
        app:showAsAction="always">
        <menu>
            <!-- ZyBox: 多选模式入口 -->
            <item
                android:id="@+id/action_multi_select"
                android:title="@string/multi_select" />
            <!-- ZyBox: 可切换的开关项，默认开启 -->
            <item
                android:id="@+id/action_toggle_auto_test"
                android:checkable="true"
                android:title="@string/toggle_auto_test" />
            <item
                android:id="@+id/action_toggle_sync_ping"
                android:checkable="true"
                android:title="@string/toggle_sync_ping" />
            <item
                android:id="@+id/action_toggle_sync_ping_fail"
                android:checkable="true"
                android:title="@string/toggle_sync_ping_fail" />
            <item
                android:id="@+id/action_update_subscription"
                android:title="@string/update_current_subscription" />
            <item
                android:id="@+id/action_clear_traffic_statistics"
                android:title="@string/clear_traffic_statistics" />
            <item
                android:id="@+id/action_remove_duplicate"
                android:title="@string/remove_duplicate" />
            <item
                android:id="@+id/action_remove_duplicate_strict"
                android:title="@string/remove_duplicate_strict" />
            <item
                android:id="@+id/action_connection_tcp_ping"
                android:title="@string/connection_test_tcp_ping" />
            <item
                android:id="@+id/action_connection_url_test"
                android:title="@string/connection_test_url_test" />
            <item
                android:id="@+id/action_connection_test_clear_results"
                android:title="@string/connection_test_clear_results" />
            <item
                android:id="@+id/action_connection_test_delete_unavailable"
                android:title="@string/connection_test_delete_unavailable" />
            <item
                android:id="@+id/action_global_mode"
                android:title="@string/global_mode"
                android:checkable="true"
                android:checked="false"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_order_layout"
                android:title="@string/sort_and_layout">
                <menu>
                    <item
                        android:title="@string/group_order"
                        android:enabled="false" />
                    <group android:id="@+id/order_group" android:checkableBehavior="single">
                        <item
                            android:id="@+id/action_order_origin"
                            android:title="@string/group_order_origin" />
                        <item
                            android:id="@+id/action_order_by_name"
                            android:title="@string/group_order_by_name" />
                        <item
                            android:id="@+id/action_order_by_delay"
                            android:title="@string/group_order_by_delay" />
                    </group>
                    <item
                        android:title="@string/layout"
                        android:enabled="false" />
                    <group android:id="@+id/layout_group" android:checkableBehavior="single">
                        <item
                            android:id="@+id/action_layout_single"
                            android:title="@string/layout_single_column" />
                        <item
                            android:id="@+id/action_layout_double"
                            android:title="@string/layout_double_column" />
                    </group>
                    <item
                        android:title="@string/card_style"
                        android:enabled="false" />
                    <group android:id="@+id/card_style_group" android:checkableBehavior="single">
                        <item
                            android:id="@+id/action_card_style_classic"
                            android:title="@string/card_style_classic" />
                        <item
                            android:id="@+id/action_card_style_stroke"
                            android:title="@string/card_style_stroke" />
                    </group>
                </menu>
            </item>
        </menu>
    </item>

</menu>
