<?xml version="1.0" encoding="utf-8"?>
<!-- ZyBox: 多选模式工具栏 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_multi_select_all"
        android:title="@string/multi_select_all"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_multi_select_invert"
        android:title="@string/multi_select_invert"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_multi_select_exit"
        android:icon="@drawable/ic_navigation_close"
        android:title="@string/multi_select_exit"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_multi_misc"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_multi_clear_traffic"
                android:title="@string/multi_clear_traffic" />
            <item
                android:id="@+id/action_multi_remove_duplicate"
                android:title="@string/multi_remove_duplicate" />
            <item
                android:id="@+id/action_multi_remove_duplicate_strict"
                android:title="@string/multi_remove_duplicate_strict" />
            <item
                android:id="@+id/action_multi_tcp_ping"
                android:title="@string/multi_tcp_ping" />
            <item
                android:id="@+id/action_multi_url_test"
                android:title="@string/multi_url_test" />
            <item
                android:id="@+id/action_multi_clear_results"
                android:title="@string/multi_clear_results" />
            <item
                android:id="@+id/action_multi_delete_unavailable"
                android:title="@string/multi_delete_unavailable" />
            <item android:title="@string/multi_qr_group">
                <menu>
                    <item
                        android:id="@+id/action_multi_qr_standard"
                        android:title="@string/multi_qr_standard" />
                    <item
                        android:id="@+id/action_multi_qr_standard_ping"
                        android:title="@string/multi_qr_standard_ping" />
                    <item
                        android:id="@+id/action_multi_qr_sn"
                        android:title="@string/multi_qr_sn" />
                </menu>
            </item>
            <item android:title="@string/multi_clipboard_group">
                <menu>
                    <item
                        android:id="@+id/action_multi_clipboard_standard"
                        android:title="@string/multi_clipboard_standard" />
                    <item
                        android:id="@+id/action_multi_clipboard_standard_ping"
                        android:title="@string/multi_clipboard_standard_ping" />
                    <item
                        android:id="@+id/action_multi_clipboard_sn"
                        android:title="@string/multi_clipboard_sn" />
                </menu>
            </item>
        </menu>
    </item>
</menu>
