<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_share_subscription"
        android:title="@string/share_subscription">
        <menu>
            <item
                android:id="@+id/action_universal_clipboard"
                android:title="@string/action_export_clipboard" />
            <item
                android:id="@+id/action_universal_qr"
                android:title="@string/share_qr_nfc" />
        </menu>
    </item>
    <item
        android:id="@+id/action_export"
        android:title="@string/action_export">
        <menu>
            <item
                android:id="@+id/action_export_clipboard"
                android:title="@string/action_export_clipboard" />
            <item
                android:id="@+id/action_export_file"
                android:title="@string/action_export_file" />
            <item
                android:id="@+id/action_export_ping_clipboard"
                android:title="@string/action_export_ping_clipboard" />
            <item
                android:id="@+id/action_export_ping_file"
                android:title="@string/action_export_ping_file" />
        </menu>
    </item>
    <item
        android:id="@+id/action_add_subscription"
        android:title="@string/add_subscription_to_group" />
    <item
        android:id="@+id/action_manage_subscriptions"
        android:title="@string/manage_subscriptions" />
    <item
        android:id="@+id/action_merge_to_group"
        android:title="@string/merge_to_other_group" />
    <item
        android:id="@+id/action_clear"
        android:title="@string/clear_profiles" />
</menu>