<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    android:paddingTop="4dp">

    <EditText
        android:id="@+id/subscription_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subscription_name"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/subscription_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/subscription_link"
        android:inputType="textUri"
        android:importantForAutofill="no" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/subscription_auto_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/subscription_auto_update" />

</LinearLayout>
